# spline_animator

./: .gitignore  AUDIO_REACTIVE_EXAMPLE.md  README.md  audio_reactive.py  birth_of_the_four_classical_elements.py  pyproject.toml  segment_overrides.json  spline_animator.py  timeline.compose.json  timeline.example.json  timeline.schema.json  timeline.wizard.json  timeline_audio_reactive.json
assets/test_images/: manifest.json
spline_animator_sketch.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
